k8s/infra-prometheus/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  type: ClusterIP
  selector:
    app: alertmanager
  ports:
    - name: http
      port: 9093
      targetPort: http
      protocol: TCP
